css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

#main-wrapper {
    display: flex;
    flex-direction: row;
}

main {
    font-family: "Zen Kaku Gothic Antique", sans-serif;
    width: 80%;
    margin-left: 16rem;
    margin-right: 2rem;
    padding-left: 2rem;
}

main p {
    margin-left: 1rem;
    font-weight: 400;
}

nav {
    font-family: "Zen Kaku Gothic Antique", sans-serif;
    width: 15rem;
    height: 100vh;
    position: fixed;
    left: 0;
    background-color: rgb(255, 245, 233);
}

nav span {
    color: #000;
    font-size: 1.8rem;
    margin-left: 1rem;
}

nav header a {
    text-decoration: none;
    color: #000;
}

nav header {
    border-bottom: 2px solid #000;
    height: 4rem;
}

nav li {
    list-style: none;
    margin-top: 1rem;
    margin-left: 1rem;
}

nav li a {
    font-family: "Courier New", Courier, monospace;
    text-decoration: underline;
    color: black;
    font-size: 1.1rem;
}

h1 {
    font-size: 2.5rem;
    text-decoration: underline;
    margin-top: 2rem;
}

code {
    font-family: "Courier New", monospace;
}

.main-section {
    margin: 2rem 0;
}

.drink-collection {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 2rem;
}

.drink {
    display: flex;
    flex-direction: column;
    width: 20rem;
    height: auto;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: azure;
    padding: 1rem;
    margin: 1rem;
}

.card-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.success-card-btn {
    background-color: rgb(0, 255, 42);
    font-size: 1.2rem;
    border-radius: 5px;
    border: 3px solid rgb(0, 141, 24);
    padding-top: 0.2rem;
    cursor: pointer;
    width: 2rem;
    height: 2rem;
    margin-bottom: 1rem;
}

.fail-card-btn {
    background-color: rgb(255, 20, 20);
    border-radius: 5px;
    padding: 0.5rem;
    cursor: pointer;
    width: 2rem;
    height: 2rem;
    margin-bottom: 1rem;
}

.lvl2 {
    background-color: rgb(179, 252, 189);
}

.lvl3 {
    background-color: rgb(255, 255, 189);
}

.min {
    background-color: rgb(255, 118, 118);
}

.max {
    background-color: rgb(123, 136, 255);
}

.drink ul {
    padding-left: 1rem;
}

.drink h3 {
    text-align: center;
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.drink-recipe span {
    display: inline-block;
    margin-top: 1rem;
}

@media screen and (max-width: 600px) {
    #main-wrapper {
        flex-direction: column;
    }

    main {
        width: 90%;
        margin-left: 0;
        padding-left: 0.5rem;
        margin-right: 0.5rem;
    }

    nav {
        width: 100%;
        height: auto;
        position: static;
    }

    nav header {
        height: auto;
    }

    .drink-collection {
        width: 100vw;
    }

    .top-button-zone {
        display: block; /* Hidden by default */
        position: fixed; /* Fixed/sticky position */
        bottom: 20px; /* Place the button at the bottom of the page */
        right: 30px; /* Place the button 30px from the right */
        z-index: 99; /* Make sure it does not overlap */
        border: none; /* Remove borders */
        outline: none; /* Remove outline */
        background-color: red; /* Set a background color */
        color: white; /* Text color */
        cursor: pointer; /* Add a mouse pointer on hover */
        padding: 15px; /* Some padding */
        border-radius: 10px; /* Rounded corners */
        font-size: 18px; /* Increase font size */
    }

    .top-button-zone a {
        color: #fff;
        font-family: "Zen Kaku Gothic Antique", sans-serif;
        text-decoration: none;
    }
}

